# api-client-py

./: .gitignore  LICENSE.txt  README.md  setup.cfg  setup.py
arikaim/: client.py
arikaim/client/: apiresponse.py  client.py
src/arikaim/: client.py
src/arikaim_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
