[metadata]
name = arikaim_client
version = 1.0.7
author = Konstantin Atanasov
author_email = info@arikaim.com
description = Arikaim CMS api client
keywords = arikaim, arikaim cms, api client
long_description = file: README.md
long_description_content_type = text/markdown
url = http://arikaim.com
license_files = LICENSE.txt
project_urls = 
    Source = https://github.com/arikaim/api-client-py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=arikaim_client
python_requires = >=3.8

[options.packages.find]
where=src